intro to 2024-05-23-hex.md

--- a/drafts/2024-05-23-hex.md
+++ b/drafts/2024-05-23-hex.md
@@ -8,5 +8,27 @@ tags: [math]
 
 **(profits as yet unrealized)*
 
-test
+This post will discuss the how and a little bit of the why for my latest project, a Python package called [hexfft](https://github.com/chris-langfield/hexfft/), which implements two types of
+FFT for data sampled on a hexagonal 2D grid. 
+
+![Screenshot 2024-05-24 at 9 45 34 AM](https://github.com/chris-langfield/chris-langfield.github.io/assets/34426450/1773cae9-233d-44d4-96e6-4951f2960e9c)
+
+
+There are several interesting advantages to this sampling geometry. For regular hexagonal sampling, each point has 6 equidistant nearest neighbors, compared with 4 in square sampling. This scheme of tiling the 2D plane reduces grid edge effects and also for more flexible path-finding and boundary definitions. An oft-cited figure is that for a circularly bandlimited signal in the plane, 13.4% fewer samples are required to fully specify the spectrum, as a hexagonal bandregion more tightly encloses a circle than a square one. 
+
+![hexvrect](https://github.com/chris-langfield/chris-langfield.github.io/assets/34426450/d7ab8815-91c3-4141-a7e3-83eee75c369b)
+
+
+Honeycomb-like structures are found throughout nature and science. Besides being highly aesthetically pleasing, this layout is used (or evolves naturally) when a maximally efficient coverage of the 2D plane is required. Two examples are the layout of electrodes on a probe used to detect electrical signals from neurons in the mouse brain, and the arrangement of optical fibers used to image galaxies (see below). 
+
+| Hexagonal structures in nature & science  |  |  |
+| ------------- | ------------- | ------------- |
+| ![nautilus_bees](https://github.com/chris-langfield/chris-langfield.github.io/assets/34426450/222c61a8-4ca9-4e42-8c28-85a215448ab9) | Honeycomb beehive structure |  courtesy of [Nautilus magazine](https://nautil.us/why-nature-prefers-hexagons-235863/)|
+| ![retina](https://github.com/chris-langfield/chris-langfield.github.io/assets/34426450/0297b3ee-92ca-4802-b3c6-8b44dcc0e3a6) | Layout of cone cells in the human retina  | courtesy of *Coleman, Sonya & Scotney, Bryan & Gardiner, B.. (2009). Design of Feature Extraction Operators for use on Biologically Motivated Hexagonal Image Structures. Proceedings of the 11th IAPR Conference on Machine Vision Applications, MVA 2009.*   |
+| ![np1 copy](https://github.com/chris-langfield/chris-langfield.github.io/assets/34426450/447371e8-5c31-4dd0-9ed2-3bb7ad218e87) | Neuropixels 1.0 neuroelectrophysiology probe | courtesy of the [Allen Institute](http://portal.brain-map.org/circuits-behavior/visual-coding-neuropixels)|
+| ![space](https://github.com/chris-langfield/chris-langfield.github.io/assets/34426450/73c2f00e-c83b-45f3-8efd-19ebd79b0b9e) | Layout of optical fibers in an astronomical detector | courtesy of the [Sloan Digital Sky Survey](https://www.sdss4.org/instruments/manga-instrument/) |
+
+
+
+
 
