--- a/drafts/2024-05-23-hex.md
+++ b/drafts/2024-05-23-hex.md
@@ -163,7 +163,19 @@ This form is agnostic to the specific geometry of the lattice (the sampling matr
 
 ## Mersereau's HexFFT kernel
 
-Consider a hexagonally periodic signal with period $N$ in both dimensions. Then in oblique coordinates, the periodicity matrix is given by
+Mersereau introduces a hexagonal region of support parameterized by an integer $N$. This region always has area $3N^{2}$. In oblique coordinates $n_1, n_2$ the region is the set
+
+$$
+\begin{align*}
+R_H (N) = \\{n_1, n_2  :  0 \leq n_1 < 2N, \\
+                        0 \leq n_2 < 2N \\
+                        -N \leq n_1 - n_2 < N\\}
+\end{align*}
+$$
+
+| *Note: Mersereau defines this region more generally with parametrizable height and width. For the purposes of `hexfft` I restricted this to the hexagonal region defined above*
+
+In oblique coordinates, the periodicity matrix for $R_H(N)$ is given by
 
 $$
 \begin{align*}
@@ -174,6 +186,8 @@ $$
 \end{align*}
 $$
 
+Then
+
 $$
 \begin{align*}
         P^{-1} = \frac{1}{3N}\begin{pmatrix}
@@ -183,8 +197,11 @@ $$
 \end{align*}
 $$
 
-Then we have
+| ![Screenshot 2024-05-24 at 12 49 10 PM](https://github.com/chris-langfield/chris-langfield.github.io/assets/34426450/5b0b23f5-27dc-4ea7-b4b3-e649174b3a10)|
+| :--: |
+| The hexagonal region of support $R_H(N) is shown for $N=3$ (shaded in light blue). The periodic extensions of $R_H(3)$ are shown in blue dashed outlines. Red arrows indicate linear combinations of the periodicity vectors $(3, 6)$ and $(6, 3)$ making up the periodicity matrix $P$. |
 
+Using the formula from the previous section, we can compute the hexagonal Fourier kernel:
 $$
 \begin{align*}
     X(k_1, k_2) = \sum_{n_1} \sum_{n_2} x(n_1, n_2) \exp\bigg(-\frac{2\pi i}{3N}\begin{pmatrix}
