--- a/drafts/2024-05-23-hex.md
+++ b/drafts/2024-05-23-hex.md
@@ -47,7 +47,9 @@ Honeycomb-like structures are found throughout nature and science. Besides being
 
 The seminal paper on processing hexagonally sampled images is Mersereau's 1979 paper, [*The Processing of Hexagonally Sampled Two-Dimensional Signals*](https://ieeexplore.ieee.org/document/1455625). Mersereau introduces an FFT algorithm for hexagonally sampled data on a hexagon-shaped (and hexagonally periodic in the plane) region of support. This was followed up by Erhardt's 1993 [*Hexagonal Fast Fourier Transform with Rectangular output*](https://ieeexplore.ieee.org/abstract/document/205759), which extends the method to regions with rectangular periodicity. These two algorithms are implemented in the `hexfft` library. Rummelt and Birdsong discovered and patented a coordinate system in which the hexagonal Fourier kernel is [separable](https://ieeexplore.ieee.org/document/7532670). There is also work covering transforms on hexagonal (and other) lattices by the [algebraic signal processing](https://pubmed.ncbi.nlm.nih.gov/17547130/) community. A 2005 book, [Hexagonal Image Processing](https://link.springer.com/book/10.1007/1-84628-203-9), also covers the topic and introduces an array of fascinating and exotic hexagonal coordinate systems. 
 
-As I became curious about this topic, I was surprised to find a lack of ready-to-use implementations of hexagonal FFTs. The closest I could find was [HexagDLy](https://github.com/ai4iacts/hexagdly) and the accompanying [publication](https://www.sciencedirect.com/science/article/pii/S2352711018302723) by Steppa and Holch (2019) which implements convolutions on hexagonal grids with an eye towards neural network processing of astronomical data. If `hexfft`'s niche has already been filled somewhere, I can only blame my own lack of Google savvy. 
+As I became curious about this topic, I was surprised to find a lack of ready-to-use implementations of hexagonal FFTs. The closest I could find was [HexagDLy](https://github.com/ai4iacts/hexagdly) and the accompanying [publication](https://www.sciencedirect.com/science/article/pii/S2352711018302723) by Steppa and Holch (2019) which implements convolutions on hexagonal grids with an eye towards neural network processing of astronomical data. If `hexfft`'s niche has already been filled somewhere, I can only blame my own lack of Google savvy.
+
+I would like to add the additional disclaimer that my implementations of the below algorithms in `hexfft` are likely far from optimal, and my intent with project is primarily (auto)didactic.
 
 # The mathematics of the hexagonal FFT
 
@@ -141,7 +143,7 @@ $$
 \end{align*}
 $$
 
-For a periodic signal regardless of sampling strategy, we use the definition of the 2D discrete Fourier transform pair given in \cite{Ehrhardt_1993}, \cite{Mersereau_Speake_1981} :
+For a periodic signal regardless of sampling strategy, we use the following definition of the 2D discrete Fourier transform pair:
 
 $$
 \begin{align}
@@ -163,7 +165,7 @@ This form is agnostic to the specific geometry of the lattice (the sampling matr
 
 ## Mersereau's HexFFT kernel
 
-Mersereau introduces a hexagonal region of support parameterized by an integer $N$. This region always has area $3N^{2}$. In oblique coordinates $n_1, n_2$ the region is the set
+In [*The Processing of Hexagonally Sampled Two-Dimensional Signals*](https://ieeexplore.ieee.org/document/1455625), Mersereau introduces a hexagonal region of support parameterized by an integer $N$. This region always has area $3N^{2}$. In oblique coordinates $n_1, n_2$ the region is the set
 
 $$
 \begin{align*}
@@ -199,9 +201,10 @@ $$
 
 | ![Screenshot 2024-05-24 at 12 49 10 PM](https://github.com/chris-langfield/chris-langfield.github.io/assets/34426450/5b0b23f5-27dc-4ea7-b4b3-e649174b3a10)|
 | :--: |
-| The hexagonal region of support $R_H(N) is shown for $N=3$ (shaded in light blue). The periodic extensions of $R_H(3)$ are shown in blue dashed outlines. Red arrows indicate linear combinations of the periodicity vectors $(3, 6)$ and $(6, 3)$ making up the periodicity matrix $P$. |
+| The hexagonal region of support $R_H(N)$ is shown for $N=3$ (shaded in light blue). The periodic extensions of $R_H(3)$ are shown in blue dashed outlines. Red arrows show linear combinations of the periodicity vectors $(3, 6)$ and $(6, 3)$ which point to the locations of the periodic repetitions. These are the columns of periodicity matrix $P$. |
 
 Using the formula from the previous section, we can compute the hexagonal Fourier kernel:
+
 $$
 \begin{align*}
     X(k_1, k_2) = \sum_{n_1} \sum_{n_2} x(n_1, n_2) \exp\bigg(-\frac{2\pi i}{3N}\begin{pmatrix}
@@ -228,5 +231,9 @@ $$
 \end{align}
 $$
 
-Where $n_1, n_2 \in R_H(N)$
+Where $n_1, n_2 \in R_H(N)$. This last expression is the form given by Mersereau in the paper. The problem, which Mersereau calls an "insurmountable" difficulty, is that unlike the 2D FFT in rectilinear coordinates, this kernel is not separable. Therefore it is not possible, in this coordinate system, to reduce the 2D transform to two 1D FFTs. Through a clever resampling of $R_H(N)$ and splitting the problem into smaller hexagonal "slow" DFTs, a speed-up from $3N^{2}$ to $9N^{2}/4$ complex multiplications is achieved by the FFT described by Mersereau. However, the algorithm also adds overhead due to pre-computation of phase shift matrices, also scaling as $N^2$. I will direct the reader to the original publication for a detailed description of this algorithm and its time/space complexity. 
+
+As mentioned above, a separable kernel has since been found using an [alternate coordinate system](https://ui.adsabs.harvard.edu/abs/2011JEI....20b3012R/abstract).
+
+
 
