--- a/drafts/2024-05-23-hex.md
+++ b/drafts/2024-05-23-hex.md
@@ -241,9 +241,59 @@ $$
 \end{align}
 $$
 
-Where $n_1, n_2 \in R_H(N)$. This last expression is the form given by Mersereau in the paper. The problem, which Mersereau calls an "insurmountable" difficulty, is that unlike the 2D FFT in rectilinear coordinates, this kernel is not separable. Therefore it is not possible, in this coordinate system, to reduce the 2D transform to two 1D FFTs. Through a clever resampling of $R_H(N)$ and splitting the problem into smaller hexagonal "slow" DFTs, a speed-up from $3N^{2}$ to $9N^{2}/4$ complex multiplications is achieved by the FFT described by Mersereau. However, the algorithm also adds overhead due to pre-computation of phase shift matrices, also scaling as $N^2$. I will direct the reader to the original publication for a detailed description of this algorithm and its time/space complexity. 
+Where $n_1, n_2 \in R_H(N)$ and $k_1, k_2$ also $\in R_H(N)$, i.e. the frequency values are sampled on the same gridpoints. This last expression is the form given by Mersereau in the paper. The problem, which Mersereau calls an "insurmountable" difficulty, is that unlike the 2D FFT in rectilinear coordinates, this kernel is not separable. Therefore it is not possible, in this coordinate system, to reduce the 2D transform to two 1D FFTs. Through a clever resampling of $R_H(N)$ and splitting the problem into smaller hexagonal "slow" DFTs, a speed-up from $3N^{2}$ to $9N^{2}/4$ complex multiplications is achieved by the FFT described by Mersereau. However, the algorithm also adds overhead due to pre-computation of phase shift matrices, also scaling as $N^2$. I will direct the reader to the original publication for a detailed description of this algorithm and its time/space complexity. 
 
 As mentioned above, a separable kernel has since been found using an [alternate coordinate system](https://ui.adsabs.harvard.edu/abs/2011JEI....20b3012R/abstract).
+
+# "Rectangular" Hexagonal FFT
+
+Mersereau's FFT algorithm described above can accurately be called a "hexagonal FFT with hexagonal periodicity" due to the fact that the sampling and periodicity matrix are both hexagonal. While the case of a hexagonal region of support could be useful in representing signals with support on, say, the unit disc, it is not the most general format in which one could find hexagonally sampled data. What we want, perhaps, is a transform which takes in data on a rectangular region of support, but still with hexagonal sampling. In [*Hexagonal Fast Fourier Transform with Rectangular output*](https://ieeexplore.ieee.org/abstract/document/205759), Ehrhardt provides just this. It is worth noting that both the input and output of this method are rectangular, and that the frequency points are arranged *hexagonally* ("Rectangular output" perhaps implies some sort of re-sampling to rectlinear grid points). It might be strictly correct to call this transform a "hexagonal FFT with rectangular periodicity", but for brevity I'll refer to it as a "rectangular" FFT with the understanding that all sampling in this post is assumed to be hexagonal.
+
+The rectangular Fourier transform is defined on a "rectangle" in oblique coordinates, corresponding to a parallelogram in "physical" space.
+
+$$
+R_R(N_1, N_2) = \\{ n_1, n_2 : n_1 < N_1, n_2 < N_2\\}
+$$
+
+For a reason that will be explained below, we pick the following periodicity matrix:
+
+$$
+\begin{align*}
+       P = \begin{pmatrix}
+        N_1 & \frac{N_2}{2} \\
+        0 & N_2
+        \end{pmatrix} 
+\end{align*}
+$$
+
+so that
+
+$$
+\begin{align*}
+        P^{-1} = \frac{1}{2}\begin{pmatrix}
+        \frac{2}{N_1} & -\frac{1}{N_1} \\
+        0 & \frac{1}{N_2}
+        \end{pmatrix}
+\end{align*}
+$$
+
+(Note $N_2$, or whichever direction is chosen to be the "row" or y-axis must be even.)
+
+Our rectangular Fourier transform is therefore:
+
+$$
+\begin{align*}
+    X(k_1, k_2) = \sum_{n_1=0}^{N_1} \sum_{n_2=0}^{N_2} x(n_1, n_2) \exp\bigg(-2\pi i \bigg(\frac{(k_1(n_1 - n_2/2)}{N_1} + \frac{k_2 n_2}{N_2}\bigg) \bigg)
+\end{align*}
+$$
+
+
+|![Screenshot 2024-05-24 at 9 54 23 PM](https://github.com/chris-langfield/chris-langfield.github.io/assets/34426450/20eddfaf-8d57-4b75-a467-b497c4d08c1b)|
+| :--: |
+| Rectangular region |
+
+
+
 
 
 
