--- a/drafts/2024-05-23-hex.md
+++ b/drafts/2024-05-23-hex.md
@@ -241,7 +241,7 @@ $$
 \end{align}
 $$
 
-Where $n_1, n_2 \in R_H(N)$ and $k_1, k_2$ also $\in R_H(N)$, i.e. the frequency values are sampled on the same gridpoints. This last expression is the form given by Mersereau in the paper. The problem, which Mersereau calls an "insurmountable" difficulty, is that unlike the 2D FFT in rectilinear coordinates, this kernel is not separable. Therefore it is not possible, in this coordinate system, to reduce the 2D transform to two 1D FFTs. Through a clever resampling of $R_H(N)$ and splitting the problem into smaller hexagonal "slow" DFTs, a speed-up from $3N^{2}$ to $9N^{2}/4$ complex multiplications is achieved by the FFT described by Mersereau. However, the algorithm also adds overhead due to pre-computation of phase shift matrices, also scaling as $N^2$. I will direct the reader to the original publication for a detailed description of this algorithm and its time/space complexity. 
+Where $n_1, n_2 \in R_H(N)$ and $k_1, k_2$ also $\in R_H(N)$, i.e. the frequency values are sampled on the same gridpoints. This last expression is the form given by Mersereau in the paper. The problem, which Mersereau calls an "insurmountable" difficulty, is that unlike the 2D FFT in rectilinear coordinates, this kernel is not separable. Therefore it is not possible, in this coordinate system, to reduce the 2D transform to two 1D FFTs. Through a clever resampling of $R_H(N)$ and splitting the problem into smaller hexagonal "slow" DFTs, a speed-up from $3N^{2}$ to $9N^{2}/4$ complex multiplications is achieved by the FFT described by Mersereau. However, the algorithm also adds overhead due to pre-computation of phase shift matrices, also scaling as $N^2$. I will leave a detailed discussion of the fast algorithm and its time/space complexity for a future post.
 
 As mentioned above, a separable kernel has since been found using an [alternate coordinate system](https://ui.adsabs.harvard.edu/abs/2011JEI....20b3012R/abstract).
 
@@ -252,7 +252,7 @@ Mersereau's FFT algorithm described above can accurately be called a "hexagonal 
 The rectangular Fourier transform is defined on a "rectangle" in oblique coordinates, corresponding to a parallelogram in "physical" space.
 
 $$
-R_R(N_1, N_2) = \\{ n_1, n_2 : n_1 < N_1, n_2 < N_2\\}
+R_R(N_1, N_2) = \\{ n_1, n_2 : n_1 < N_1, n_2 < N_2 \\}
 $$
 
 For a reason that will be explained below, we pick the following periodicity matrix:
@@ -283,17 +283,40 @@ Our rectangular Fourier transform is therefore:
 
 $$
 \begin{align*}
-    X(k_1, k_2) = \sum_{n_1=0}^{N_1} \sum_{n_2=0}^{N_2} x(n_1, n_2) \exp\bigg(-2\pi i \bigg(\frac{(k_1(n_1 - n_2/2)}{N_1} + \frac{k_2 n_2}{N_2}\bigg) \bigg)
+    X(k_1, k_2) = \sum_{n_1} \sum_{n_2} x(n_1, n_2) \exp\bigg(-2\pi i \bigg(\frac{(k_1(n_1 - n_2/2)}{N_1} + \frac{k_2 n_2}{N_2}\bigg) \bigg)
 \end{align*}
 $$
 
+$n_1, n_2 \in R_R(N_1, N_2)$.
 
-|![Screenshot 2024-05-24 at 9 54 23 PM](https://github.com/chris-langfield/chris-langfield.github.io/assets/34426450/20eddfaf-8d57-4b75-a467-b497c4d08c1b)|
+|![Screenshot 2024-05-25 at 9 40 48 AM](https://github.com/chris-langfield/chris-langfield.github.io/assets/34426450/b4496938-e1a0-4033-88a2-f32688f2f0df)|
 | :--: |
-| Rectangular region |
+| Rectangular region of support for a hexagonal FFT. See text below. |
 
+The figure above demonstrates why this periodicity matrix was chosen. A parallelogram in physical space is not the most convenient region of support for real-life signals. What we really want is a rectangular region. The region shaded in light blue above, $R_R(6, 8)$ can be re-sampled horizontally by moving the right upper triangular region onto the right side, creating a rectangular region (in pink) whose periodicity is rectangular. One periodic extension of this re-sampled region is shown outlined in red. 
 
+So to take the hexagonal FFT of data on a physically rectangular (rather than coordinate-rectangular, which would physically be a parallelogram) region, the region can be "shifted" onto an equivalent parallelogram-shaped region of support, transformed in this "natural" coordinate system for the hexagonal grid, and then the result shifted back to obtain the FT on a rectangular grid. This is done automatically when the `hexfft.fft()` is called on an array in offset coordinates. (see [this notebook](https://github.com/chris-langfield/hexfft/blob/main/examples/RectangularPeriodicity.ipynb) for details). 
 
+|![Screenshot 2024-05-25 at 9 55 44 AM](https://github.com/chris-langfield/chris-langfield.github.io/assets/34426450/efdcf2ff-e73e-4636-9f09-bd1f12e818b0)|
+| :--: |
+| The `rect_shift` and `rect_unshift` functions of `hexfft.array` shift a signal to/from rectangular vs parallelogram regions of support. |
 
+The algorithm for the rectangular FFT is quite straightforward. The kernel above is broken into two sequences of 1D FFTs with a phase shift. The following derivation is directly from Ehrhardt's paper. Define:
 
+$$
+\begin{align*}
+    F_1(k_1, n_2) = \sum_{n_1} x(n_1, n_2) \exp(-2\pi i k_1 n_1 / N_1) \\
+    F_2(k_1, n_2) = F_1(k_1, n_2) \exp(\pi i k_1 n_2 / N_1)
+\end{align*}
+$$
+
+Then 
+
+$$
+\begin{align*}
+X(k_1, k_2) = \sum_{n_1} F_2(k_1, n_2) \exp(-2\pi i k_2 n_2 / N_2)
+\end{align*}
+$$
+
+The time complexity is thus $N_1 N_2 \log N_1 N_2$.
 
