update hex hex complexity

--- a/drafts/2024-05-23-hex.md
+++ b/drafts/2024-05-23-hex.md
@@ -241,7 +241,7 @@ $$
 \end{align}
 $$
 
-Where $n_1, n_2 \in R_H(N)$ and $k_1, k_2$ also $\in R_H(N)$, i.e. the frequency values are sampled on the same gridpoints. This last expression is the form given by Mersereau in the paper. The problem, which Mersereau calls an "insurmountable" difficulty, is that unlike the 2D FFT in rectilinear coordinates, this kernel is not separable. Therefore it is not possible, in this coordinate system, to reduce the 2D transform to two 1D FFTs. Through a clever resampling of $R_H(N)$ and splitting the problem into smaller hexagonal "slow" DFTs, a speed-up from $3N^{2}$ to $9N^{2}/4$ complex multiplications is achieved by the FFT described by Mersereau. However, the algorithm also adds overhead due to pre-computation of phase shift matrices, also scaling as $N^2$. I will leave a detailed discussion of the fast algorithm and its time/space complexity for a future post.
+Where $n_1, n_2 \in R_H(N)$ and $k_1, k_2$ also $\in R_H(N)$, i.e. the frequency values are sampled on the same gridpoints. This last expression is the form given by Mersereau in the paper. The problem, which Mersereau calls an "insurmountable" difficulty, is that unlike the 2D FFT in rectilinear coordinates, this kernel is not separable. Therefore it is not possible, in this coordinate system, to reduce the 2D transform to two sequences of 1D FFTs. Through a clever resampling of $R_H(N)$ and splitting the problem into smaller hexagonal "slow" DFTs, a speed-up from $(3N^{2})^2 = 9 N^{4}$ to $9N^{2}/4$ complex multiplications is achieved by the FFT described by Mersereau. The process is quite complex and I refer the reader to the original paper for a full description.
 
 As mentioned above, a separable kernel has since been found using an [alternate coordinate system](https://ui.adsabs.harvard.edu/abs/2011JEI....20b3012R/abstract).
 
