--- a/drafts/2024-05-23-hex.md
+++ b/drafts/2024-05-23-hex.md
@@ -185,7 +185,7 @@ $$
 
 Given $N$, it's easy to see from the figure above that this region fits snugly into an oblique "square" of size $2N$. The function `hsupport()` from `hexfft.utils` can automatically compute a mask of this region for a square array of a given size:
 
-![hsupport](https://github.com/chris-langfield/chris-langfield.github.io/assets/34426450/1c78d94f-b4b8-4cc8-9df2-ed2bdad26045) |
+|![hsupport](https://github.com/chris-langfield/chris-langfield.github.io/assets/34426450/1c78d94f-b4b8-4cc8-9df2-ed2bdad26045) |
 | :--: |
 | A hexagonal region à la Mersereau with $N=8$ embedded in a 16x16 oblique array, generated via `hexfft.utils.hsupport()` |
 
