--- a/drafts/2024-05-23-hex.md
+++ b/drafts/2024-05-23-hex.md
@@ -241,7 +241,7 @@ $$
 \end{align}
 $$
 
-Where $n_1, n_2 \in R_H(N)$ and $k_1, k_2$ also $\in R_H(N)$, i.e. the frequency values are sampled on the same gridpoints. This last expression is the form given by Mersereau in the paper. The problem, which Mersereau calls an "insurmountable" difficulty, is that unlike the 2D FFT in rectilinear coordinates, this kernel is not separable. Therefore it is not possible, in this coordinate system, to reduce the 2D transform to two sequences of 1D FFTs. Through a clever resampling of $R_H(N)$ and splitting the problem into smaller hexagonal "slow" DFTs, a speed-up from $(3N^{2})^2 = 9 N^{4}$ to $9N^{2}/4$ complex multiplications is achieved by the FFT described by Mersereau. The process is quite complex and I refer the reader to the original paper for a full description.
+Where $n_1, n_2 \in R_H(N)$ and $k_1, k_2$ also $\in R_H(N)$, i.e. the frequency values are sampled on the same gridpoints. This last expression is the form given by Mersereau in the paper. The problem, which Mersereau calls an "insurmountable" difficulty, is that unlike the 2D FFT in rectilinear coordinates, this kernel is not separable. Therefore it is not possible, in this coordinate system, to reduce the 2D transform to two sequences of 1D FFTs. Through a clever resampling of $R_H(N)$ and splitting the problem into smaller hexagonal "slow" DFTs, a speed-up from $(3N^{2})^2 = 9 N^{4}$ to $9N^{2}/4$ complex multiplications is achieved by the FFT described by Mersereau. The process is quite complex and I refer the reader to the original paper for a full description. This transform is implemented via `hexfft.fft()` and `hexfft.ifft()` with the `periodicity="hex"` option. 
 
 As mentioned above, a separable kernel has since been found using an [alternate coordinate system](https://ui.adsabs.harvard.edu/abs/2011JEI....20b3012R/abstract).
 
@@ -318,5 +318,10 @@ X(k_1, k_2) = \sum_{n_1} F_2(k_1, n_2) \exp(-2\pi i k_2 n_2 / N_2)
 \end{align*}
 $$
 
-The time complexity is thus $N_1 N_2 \log N_1 N_2$.
+The time complexity is thus $N_1 N_2 \log N_1 N_2$. This transform is implemented via `hexfft.fft()` and `hexfft.ifft()` with the `periodicity="rect"` option. 
+
+# Conclusion
+
+The above is only a (far from exhaustive) introduction to the basic concepts underlying hexagonal Fourier transforms. I have only barely scratched the surface of experimenting with data processing on hexagonal grids. The hodgepodge of tools in the `hexfft` package and a few examples of basic operations are demonstrated in the [example notebooks](https://github.com/chris-langfield/hexfft/tree/main/examples). Future directions that come to mind are including support for coordinate systems that leverage hexagonal geometry more than the oblique system, designing discrete filters for hexagonal grids, and writing algorithms that can handle more general sampling strategies and periodicity conditions. More practically, I expect to make improvements to the basic API of the package, and explore verification on hexagonal grids of classical properties of Fourier transforms such as [Parseval's identity](https://en.wikipedia.org/wiki/Parseval%27s_theorem) and the shift and convolution theorems (and how those might need to be modified based on this geometry). 
+
 
